Tue Apr 21 09:20:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (init_mkmf): needs default library path even if
	  cross compiling.

Tue Apr 21 07:07:45 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_push): bypass rb_ary_store().

Tue Apr 21 01:25:16 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (bigsub_int): subtraction without making internal
	  bignum values.

	* bignum.c (bigadd_int): ditto for addition.

	* bignum.c (bigtrunc): declare inline.

	* bignum.c (rb_quad_pack): fix condition.

Tue Apr 21 01:13:42 2009  Alexander Zavorine  <alexandre.zavorine@nokia.com>

	* symbian/setup (config.h): added TIMET2NUM and NUM2TIMET to match the change in time.c 

Mon Apr 20 20:29:04 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_split_m): faster processing on 7bit strings.

	* string.c (ascii_isspace): faster isspace() for 7bit strings.

Sun Apr 19 14:43:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_cleanup): the order of local variables on stack is
	  undefined.  should use outermost VALUE for ruby_init_stack.

	* gc.c (ruby_get_stack_grow_direction, Init_stack): allows volatile
	  pointer.

	* thread_*.c (ruby_init_stack): ditto.

Sun Apr 19 13:17:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gem_prelude.rb (Gem::QuickLoader#push_gem_version_on_load_path):
	  check for requirement if the gem is installed.  a patch from
	  Kyosuke MOROHASHI at [ruby-dev:38020].

Sun Apr 19 01:39:17 2009  Tanaka Akira  <akr@fsij.org>

	* process.c (proc_seteuid_m): defined to use rb_f_notimplement if not
	  implemented.
	  (proc_setegid_m): ditto.

Sun Apr 19 01:03:56 2009  Tanaka Akira  <akr@fsij.org>

	* process.c (proc_setuid): use rb_f_notimplement if not implemented.
	  (proc_setgid): ditto.

Sat Apr 18 23:07:18 2009  Tanaka Akira  <akr@fsij.org>

	* ext/readline/readline.c: use rb_f_notimplement for methods not
	  implemented.

	* ext/openssl/ossl_engine.c: ditto.
