@@ -1,3 +1,8 @@
+Tue Apr 21 09:25:41 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* dir.c (dir_path, dir_each, glob_helper): use readdir_r() if
+	  available.
+
 Tue Apr 21 09:20:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/mkmf.rb (init_mkmf): needs default library path even if
